--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
       <meta charset='utf-8'>
       <meta name='viewport' content='width=device-width'>
-      <title>Count to Goal</title>
+      <title>PomodoroLite</title>
       <style>
 body {
   margin: 0;
@@ -44,9 +44,9 @@ body {
 </div>
 
 <div style="padding-left:16px">
- <h2> Counter to Goal App</h2>
-        <p> This is an efficiency app for people that trying to achieve ambitious goals.</p>
-        <p> Counter to Goal: <br>When you have a goal, you have a specific date. However, you need to see how many days left to the date. In this time, Counter to Goal comes great advantage. Set an amazing goal then see how many days passed or left!
+ <h2> PomodoroLite App</h2>
+        <p> PomodoroLite is a simplest way to use Pomodoro Method!</p>
+        <p> PomodoroLite: <br>Pomodoro is largely known working/studying method for all of us. Here, PomodoroLite comes with great deal. Easy to use, efficient, even smart! PomodoroLite keeps your old working hours, then makes them beautifully organized. It can be configured as you wish. Plus, the statistic feature is master piece of PomodoroLite App.
         </p>
         <p> For more information, please do not hesitate to contact with stelselim.devs@gmail.com</p>
 </div>
